--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
                     v=['initialize','identify','updateOptions','pageLoad']; for(w=0,x=v.length;w<x;++w)(function(m) {
                         o[m]=o[m]||function() {o._q[m===v[0]? 'unshift':'push']([m].concat([].slice.call(arguments,0)));};
                     })(v[w]);
-                    y=e.createElement(n); y.async=!0; y.src='https://pendo-insert-dev-static.storage.googleapis.com/agent/static/'+apiKey+'/pendo.js';
+                    y=e.createElement(n); y.async=!0; y.src='https://cdn.pendo.io/agent/'+apiKey+'/pendo.js';
                     z=e.getElementsByTagName(n)[0]; z.parentNode.insertBefore(y,z);
                 })(window,document,'script','pendo');
                 pendo.initialize({
                     apiKey: apiKey,
                     visitor: {
-                        id: config.user
+                        id: 'VISITOR-UNIQUE-ID'
                     },
                     account: {
-                        id: config.account
+                        id: 'ACCOUNT-UNIQUE-ID'
                     }
                 });
-            })('25aadcc0-fbfe-453f-6857-f5d8b481f03e');
+            })('138b462c-f240-48ce-6c03-5c773eb68821');
         </script>
     </body>
 </html>
