--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         id: 'VISITOR-UNIQUE-ID'
                     },
                     account: {
-                        id: config.account
+                        id: 'ACCOUNT-UNIQUE-ID'
                     }
                 });
             })('138b462c-f240-48ce-6c03-5c773eb68821');
